--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"websocket-consumer",
 		"actioncable-consumer"
 	],
-	"version": "1.0.0",
+	"version": "1.0.1",
 	"description": "A react wrapper for working with rails actioncable. Requires react v16.3 and above.",
 	"main": "lib/index.js",
 	"repository": {
@@ -23,9 +23,7 @@
 	"private": false,
 	"peerDependencies": {
 		"prop-types": "^15.6.2",
-		"react": "^16.6.3"
-	},
-	"dependencies": {
+		"react": "^16.6.3",
 		"actioncable": "^5.2.1"
 	},
 	"devDependencies": {
