--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"websocket-consumer",
 		"actioncable-consumer"
 	],
-	"version": "1.0.1",
+	"version": "1.0.2",
 	"description": "A react wrapper for working with rails actioncable. Requires react v16.3 and above.",
 	"main": "lib/index.js",
 	"repository": {
@@ -22,9 +22,9 @@
 	"license": "MIT",
 	"private": false,
 	"peerDependencies": {
+		"actioncable": "^5.2.1",
 		"prop-types": "^15.6.2",
-		"react": "^16.6.3",
-		"actioncable": "^5.2.1"
+		"react": "^16.6.3"
 	},
 	"devDependencies": {
 		"babel-core": "^6.26.3",
